# duties-of-the-hearts

./: .env.example  .gitignore  LICENSE  README.md  STEP1_COMPLETE.md  STEP3_COMPLETE.md  config.yaml  duties_of_the_hearts.sqlite  pyproject.toml  test_config.py
assets/: Duties of the Heart - he - Vocalized Edition (1).json
src/: __init__.py
src/models/: __init__.py  database.py
src/pipeline/: export_book.py  step1_import.py  step2_translate.py  step3_export.py  translate_batch.py  translate_book.py  translate_chapter.py
src/utils/: __init__.py
tests/: README.md  analyze_sections.py  check_quote_preservation.py  preview_test_section.py  test_clean_text.py  verify_import.py  verify_translations.py
